# MySpice

./: CMakeLists.txt  README.md  acvoltagesource.cpp  acvoltagesource.h  capacitor.cpp  capacitor.h  circuitsolver.cpp  circuitsolver.h  component.h  components.h  dcvoltagesource.cpp  dcvoltagesource.h  diode.cpp  diode.h  dummygraphics.cpp  dummygraphics.h  gmressolver.cpp  gmressolver.h  gmrestest.cpp  gmrestest.h  grapheditor.cpp  grapheditor.h  graphicsadapter.cpp  graphicsadapter.h  inductor.cpp  inductor.h  infocard.cpp  infocard.h  mouseeventobserver.cpp  mouseeventobserver.h  plotcard.cpp  plotcard.h  rendercomponent.cpp  rendercomponent.h  resistor.cpp  resistor.h  scrollablepane.cpp  scrollablepane.h  settingscard.cpp  settingscard.h  (+5 more)
buildWeb/: MySpiceEmscripten.data  MySpiceEmscripten.html  MySpiceEmscripten.js  MySpiceEmscripten.wasm
qt/: grapheditorwidget.cpp  grapheditorwidget.h  graphicsqt.cpp  graphicsqt.h  main.cpp  mainwindow.cpp  mainwindow.h
sdl2/: graphicssdl.cpp  graphicssdl.h  main.cpp
web/: shell.html
